# ace

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  seed.py
backend/app/agents/: auditor.py  consumer_agent.py  producer_agent.py
backend/app/api/: agent.py  capabilities.py  ledger.py
backend/app/core/: cost.py  crypto.py  executor.py  llm.py  payment.py  registry.py
backend/app/schemas/: capability.py  incident.py  payment.py
backend/data/: seed_capabilities.yaml
docs/: DEMO_SCRIPT.md  DESIGN.md  FAQ.md  PITCH.md  TASK.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/history/: page.tsx
frontend/components/: AgentThinkingPanel.tsx  CapabilityCard.tsx  CapabilityRegistry.tsx  CodeInspector.tsx  IncidentSandbox.tsx  LedgerPanel.tsx  MetricsPanel.tsx  PaymentOverlay.tsx  RoiHero.tsx  TraceConsole.tsx  TraceTimeline.tsx
frontend/lib/: api.ts  mockTrace.ts  traceEngine.ts  types.ts
frontend/public/: observability-preview.html
frontend/store/: useAceStore.ts
