[project]
name = "ace-backend"
version = "0.1.0"
description = "Agent Capability Exchange — backend registry, agents, and nanopayment orchestration"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "eth-account>=0.13",
    "web3>=7.6",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = ["ruff>=0.8", "pytest>=8.3", "pytest-asyncio>=0.25"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
extend-select = ["UP006", "UP007"]

[tool.ruff.format]
quote-style = "double"

[tool.uv]
package = false
